# NIFTy

./: .directory  .gitignore  .gitlab-ci.yml  .style.yapf  CITATION.cff  CMakeLists.txt  CONTRIBUTORS.md  ChangeLog  ChangeLog.md  Dockerfile  DockerfileCuda  MANIFEST.in  Makefile  PKG-INFO  README.md  README.rst  __init__.py  benchmark_nthreads=1_devices=NVIDIA A100-SXM4-80GB+cpu.npy  benchmark_nthreads=8_devices=NVIDIA A100-SXM4-80GB+cpu.npy  check_mf_model.py  cleanup.sh  d2o_config  differences  field.py  files.txt  flake.nix  gpu_test.py  issue_example.py  minimal_benchmark.py  minimal_benchmark_vis.py  minimal_example.py  mpi_dummy.py  nifty_about.py  nifty_config  nifty_core.py  nifty_field.py  nifty_mpi_data.py  nifty_paradict.py  nifty_power.py  nifty_power_indices.py  (+13 more)
bench/: fft.py  gaussian_energy.py  reduction_experiments.py
ci/: generate_test_data.sh  install_basics.sh  install_h5py.sh  install_libsharp.sh  install_mpi4py.sh  install_pyHealpix.sh  install_pyfftw.sh  requirements.txt  requirements_base.txt  requirements_extras.txt
config/: __init__.py  d2o_config.py  nifty_config.py
d2o/: __init__.py  cast_axis_to_tuple.py  d2o_iter.py  d2o_librarian.py  distributed_data_object.py  distributor_factory.py  dtype_converter.py  strategies.py  translate_to_mpi_operator.py
demos/: 0_intro.py  0_wiener_filter.py  1_inference_with_nifty.py  1_tomography.py  D2O.conf  D4PO.py  README.md  Wiener Filter.ipynb  Wiener_Filter.ipynb  __init__.py  a_NDVariableCovarianceGaussian.py  a_icr.py  a_multi_gpu.py  a_nonlinear_regression.py  a_wiener_filter.py  altVI.py  banana.py  banana_w_reg.py  bench_gridder.py  bernoulli_demo.py  broken_banana.py  categorical_L1.py  cfm_sliders.ipynb  correlated_field_w_known_spectrum.py  correlated_field_w_unknown_factorizing_spectra.py  correlated_field_w_unknown_spectrum.py  critical_filtering.py  custom_nonlinearities.py  demo3.py  demo_cf.py  demo_correlated_field.py  demo_excaliwir.py  demo_factorizing_power_spectra.py  demo_faraday.py  demo_tomography.py  demo_wf1.py  demo_wf2.py  demo_wf3.py  find_amplitude_parameters.py  general_model_demo.py  (+76 more)
doc/: generate.sh
docs/: better_apidoc.py  demo.ipynb  generate.sh  howto.txt  howtogenerate.txt
dummys/: MPI_dummy.py  __init__.py
field_types/: __init__.py  base_field_type.py  field_array.py
jifty/: Dockerfile  README.rst  setup.py
keepers/: __init__.py  nifty_about.py  nifty_configuration.py  nifty_default_config.py  nifty_dependency_injector.py
lm/: __init__.py  gl_space.py  hp_space.py  lm_space.py  nifty_lm.py  nifty_power_conversion_lm.py
more_derivatives/: deriv_tests.py  differential_tensor.py  multi_linearization.py  multiderivative_operator.py
nifty/: __init__.py  basic_arithmetics.py  dobj.py  domain_object.py  domain_tuple.py  field.py  logger.py  low_level_library.py  nifty_meta.py  nifty_random.py  nifty_simple_math.py  nifty_utilities.py  paradict.py  power_conversion.py  random.py  sugar.py  utilities.py  version.py
nifty2go/: __init__.py  basic_arithmetics.py  domain_object.py  domain_tuple.py  field.py  nifty_utilities.py  random.py  sugar.py
nifty4/: __init__.py  dobj.py  domain_object.py  domain_tuple.py  field.py  logger.py  sugar.py  tensor.py  utilities.py  version.py
nifty5/: __init__.py  compat.py  dobj.py  domain_tuple.py  extra.py  fft.py  field.py  frequency_sensitivity.npy  internal_config.py  linearization.py  logger.py  multi_domain.py  multi_field.py  nonlinearities.py  operator.py  operator_spectrum.py  parallelization_scheme.py  plot.py  probing.py  sugar.py  utilities.py
nifty6/: __init__.py  diff_tensor.py  dobj.py  domain_tuple.py  extra.py  fft.py  field.py  linearization.py  logger.py  mpi.py  multi_domain.py  multi_field.py  operator_spectrum.py  operator_tree_optimiser.py  plot.py  pointwise.py  probing.py  random.py  sugar.py  taylor.py  utilities.py  version.py
operators/: __init__.py  line_integrator.pyx  nifty_explicit.py  nifty_los.py  nifty_los_implementation.pyx  nifty_minimization.py  nifty_operators.py  nifty_probing.py  nifty_probing_old.py
paper/: benchmark_nthreads=1_devices=NVIDIA A100-SXM4-80GB+cpu.npy  benchmark_nthreads=8_devices=NVIDIA A100-SXM4-80GB+cpu.npy  minimal_benchmark.py  minimal_benchmark_vis.py  minimal_example.py  paper.bib  paper.md  paper.tex
power/: __init__.py  lm_power_space.py  power_index_factory.py  power_indices.py  power_space.py  rg_power_space.py
rg/: __init__.py  fft_rg.py  nifty_fft.py  nifty_power_conversion_rg.py  nifty_rg.py  powerspectrum.py  rg_space.py
spaces/: __init__.py
sphinx/: Makefile
src/: __init__.py  any_array.py  config.py  conjugate_gradient.py  correlated_field.py  diff_tensor.py  diff_tensor_primitive.py  domain_tuple.py  extra.py  (+34 more)
(+1529 files in other folders)
