[project]
name = "nifty"
version = "9.0.0"
description = "Probabilistic programming framework for signal inference algorithms that operate regardless of the underlying grids and their resolutions"
readme = "README.md"
authors = [
    {name = "Martin Reinecke", email = "martin@mpa-garching.mpg.de"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.17.0",
    "scipy >= 1.9.0",
]
license.text = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]


[project.urls]
Homepage = "https://github.com/nifty-ppl/nifty"
"Source Code" = "https://github.com/nifty-ppl/nifty"
"Bug Tracker" = "https://github.com/nifty-ppl/nifty/issues"
"Documentation" = "https://ift.pages.mpcdf.de/nifty/"
"Changelog" = "https://github.com/NIFTy-PPL/NIFTy/blob/NIFTy_8/ChangeLog.md"

[project.optional-dependencies]
re = [
    "jax>=0.4.20,!=0.4.31,!=0.4.32,!=0.4.33,!=0.4.34,!=0.4.35,!=0.4.36,!=0.4.37,!=0.4.38,!=0.6.0",
    "jaxlib>=0.4.20,!=0.4.31,!=0.4.32,!=0.4.33,!=0.4.34,!=0.4.35,!=0.4.36,!=0.4.37,!=0.4.38,!=0.6.0",
    "jaxbind",
    "ducc0>=0.27.0",
    "healpy",
]
cl_native = [
    "ducc0>=0.27.0",
]
cl_gpu = [
    "cupy",
    "pyvkfft"
]
cl_parallel = [
    "mpi4py",
]
cl_util = [
    "astropy",
    "h5py",
    "matplotlib",
]
doc = [
    "sphinx<8.2",
    "pydata-sphinx-theme",
    "sphinxcontrib-bibtex",
    "myst-parser",
    "jupyter",
    "nbconvert",
    "jupytext",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ducc0",
    "nifty[re]",
    "nifty[cl_util]",
]
all = ["nifty[re,cl_native,cl_parallel,cl_util,test,doc]"]

[build-system]
requires = [
    "setuptools >= 65.7.0",
    "numpy >= 1.23.0",
    "scipy >= 1.9.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nifty", "nifty*"]
